Fix overflow issue on content page

--- a/content/main.scss
+++ b/content/main.scss
@@ -16,7 +16,6 @@ $color2: #3A2E39;
 body
 {
 	background-color: $color1;
-	overflow: hidden;
 	color: $color2;
 }
 
